# blogreich

./: .gitignore  BLOG Automatisierung (1).json  CLAUDE.md
.claude/commands/: 01-plan.md  02-execute.md  03-validate.md  04-review.md  05-commit.md  07-bugfix.md  08-feature.md  09-screenshot-fix.md  10-evaluate-ui.md  prd-create.md  prd-update.md  prime.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/blogs/: prompts.py  routes.py  schemas.py  service.py
backend/app/blogs/tests/: test_style_pipeline.py
backend/app/companies/: routes.py  schemas.py  service.py
backend/app/core/: auth.py  config.py  logging.py  supabase_client.py
backend/app/images/: routes.py  schemas.py  service.py
backend/app/keywords/: routes.py  schemas.py  service.py
docs/: LED-Hallenbeleuchtung für Produktion und Logistik.md  bolt-prompt.md
docs/PRDs/: PRD_Blogplattform.md
docs/PRPs/: PRP_01_Style_Pipeline_Integration.md  PRP_02_Outline_Editor.md  PRP_03_SEO_Optimierung.md  PRP_04_Blog_Export.md  PRP_05_AWS_Hosting.md  PRP_06_Stabilitaet_Hardening.md  PRP_07_WordPress_Publishing.md  PRP_08_Landing_Page.md  PRP_09_Stripe_Payments.md  PRP_10_Mehrsprachigkeit.md  PRP_11_Bulk_Blog_Generation.md  PRP_12_Style_RAG_pgvector.md  PRP_13_Internal_Linking.md  PRP_14_AEO_GEO_Optimierung.md  PRP_15_AI_Blog_Agent.md  PRP_16_Blog_Templates.md  PRP_17_API_Drittanbieter.md  PRP_18_Social_Media_Snippets.md  PRP_19_Analytics_Dashboard.md  PRP_20_Plagiatspruefung.md  (+3 more)
project/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
(+32 files in other folders)
