[project]
name = "blogreich-api"
version = "0.1.0"
description = "Blogreich FastAPI Backend - KI-gesteuerte Blog-Generierung"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "supabase>=2.15.0",
    "anthropic>=0.52.0",
    "httpx>=0.28.0",
    "tavily-python>=0.5.0",
    "pydantic-settings>=2.8.0",
    "structlog>=25.1.0",
    "python-jose[cryptography]>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["supabase.*", "jose.*", "tavily.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
